--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,6 @@ python-dotenv==1.0.1
 httpx==0.27.2
 structlog==24.4.0
 slowapi==0.1.9
-pandas==2.2.3
-pandas-ta==0.3.14b0
+pandas>=2.3.2
+pandas-ta==0.4.71b0
 
